2007-07-17  Andreas Kupries <andreask@activestate.com>

	* expect.c: Circumvented problems with the C compiler by use of a
	  temporary variable to hold the unicode pointer of a glob
	  pattern. The computed pattern length given to
	  Exp_StringCaseMatch was bogus.

	* exp_glob.c: Added tracing of the glob matcher internals (Can be
	  enabled by define EXP_INTERNAL_TRACE_GLOB). Fixed bug in a guard
	  condition in the optimized handling of '*'. The bad condition
	  caused the code to miss possible matches at the beginning of the
	  input (first char).

	* tests/expect.test: Added tests which check the glob matcher and
	  RE gate keeping.

	* configure.in: Bumped to 5.44.1.1 to separate this from the
	  regular 5.44.1 sources.
	* configure: Regenerated.

2007-07-12  Andreas Kupries  <andreask@activestate.com>

	* expect.c: Found bugs mismanaging input and pattern in the
	* exp_glob.c: updated glob matcher. We cannot check for '\0'
	  anymore to find the end of the string, these are counted
	  arrays now. Rewritten to use sentinel pointers.

2007-07-11  Andreas Kupries  <andreask@activestate.com>

	* exp_chan.c: Converted the buffering system from UTF-8 in Tcl_Obj
	* exp_command.h: to UTF-16 C-array, to avoid the repeated conversion
	* expect.c: of the input from utf-8 to utf-16. Updated the glob
	* exp_glob.c: matching code to use the same tricks for speed which
	* exp_inter.c: are used by the Tcl core. Extended the regexp
	* exp_log.c: matching path with a glob matcher which uses a gate
	* exp_log.h: keeper glob pattern to weed out most non-candidates
	* retoglob.c (New file): in a speedy manner. Regexp matching now
	  has to be done only for the small number of candidates
	  identified by the gate keeper. Overall speed improvement as glob
	  matching is faster than regexp matching. Added code translating
	  regular expressions into their gate keeper glob pattern.

	* Dbg.c: Converted the lot of argc,argv based command